main bolon bagshiin detailiin page anhnii huvilbar

--- a/home.html
+++ b/home.html
@@ -10,28 +10,53 @@
     <nav>
         <div id="ded">
             <a href="#">Нүүр хуудас</a>
-            <a href="#">Цагийн ажил</a>
+            <a href="#">Цагийн багш</a>
             <a href="#">Үндсэн ажил</a>
             <a href="#">Байршлаар</a>
             <a href="#">Компани</a>
         </div>
-        <a href="#" id="zar">Зар үүсгэх</a>
+        <a href="#" id="zar">Нэвтрэх</a>
     </nav>
     <div id="eh">
         <aside>
-            <div>Математик</div>
-            <div>Физик</div>
-            <div>Байгалийн ухаан</div>
-            <div>Хэл</div>
-            <div>Спорт</div>
-            <div>Тулааны урлаг</div>
-            <div>Урлаг</div>
-            <div>Уран сайхан</div>
-            <div>Хөгжим</div>
-            <div>Технологи</div>
+            <form action="">
+                <input type="text" placeholder="Хайлт хийх">
+            </form>
+            <div id="angilal">Бүх ангилал</div>
+            <div>
+                <div><a href="">Физик</a></div>
+                <div><a href="">Байгалийн ухаан</a></div>
+                <div><a href="">Хэл</a></div>
+                <div><a href="">Спорт</a></div>
+                <div><a href="">Тулааны урлаг</a></div>
+                <div><a href="">Урлаг</a></div>
+                <div><a href="">Уран сайхан</a></div>
+                <div><a href="">Хөгжим</a></div>
+                <div><a href="">Технологи</a></div>
+            </div>
         </aside>
         <div id="main">
-    
+            <div class="bagsh">
+                <img src="./pro.png" alt="">
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, distinctio.</span>
+                <button><a href="./bagsh.html">Дэлгэрэнгүй</a></button>
+            </div>
+            <div class="bagsh">
+                <img src="./pro.png" alt="">
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, distinctio.</span>
+                <button>Дэлгэрэнгүй</button>
+            </div>
+            <div class="bagsh">
+                <img src="./pro.png" alt="">
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, distinctio.</span>
+                <button>Дэлгэрэнгүй</button>
+            </div>
+            <div class="bagsh">
+                <img src="./pro.png" alt="">
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, distinctio.</span>
+                <button>Дэлгэрэнгүй</button>
+            </div>
+
         </div>
     </div>
 </body>
