--- a/htmlFiles/HomePage.html
+++ b/htmlFiles/HomePage.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HomePage</title>
+    <link rel="stylesheet" href="../cssFiles/HomePage.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <div>
+            <a href="/HomePage.html">
+              <img src="../images/logo.webp" alt="logo" class="logo"
+            /></a>
+            <li><a href="/HomePage.html" class="text1">Нүүр хуудас</a></li>
+            <li><a href="#" class="text1">Цагийн багш нар</a></li>
+            <li><a href="#" class="text1">Үндсэн багш нар</a></li>
+          </div>
+          <li><a href="#" class="text1">Нэвтрэх</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="mainContainer">
+      <div class="column">
+        <h1>О.Мөнх-Алдар</h1>
+        <p>Математикын багш</p>
+
+        <img src="../images/star.webp" class="star" />
+        <div class="row">
+          <button class="btn1">Багш болох</button>
+          <button class="btn2">Сурагч болох</button>
+        </div>
+      </div>
+      <img src="../images/teacher.png" class="teacherImg" />
+      <p class="abtTchr">
+        Ажилласан байдал: <br />
+        🏫 2001 - 2008: Улаанбаатар хотын 45-р сургуульд математикийн багш
+        <br />
+        🏫 2008 - 2015: Монгол Улсын Их Сургууль, Боловсролын сургуульд ахлах
+        багш <br />🏫 2015 - 2023: Шинжлэх Ухаан Технологийн Их Сургууль,
+        Докторын зэрэг хамгаалж, профессор <br />🏫 2023 - одоо: Математикийн
+        хичээлийн сургалтын контент хөгжүүлэх судлаач <br />🔹 Тусгай ур чадвар:
+        Олимпиадын бэлтгэл хөтөлбөр боловсруулсан "Өндөр түвшний математик" ном
+        бичсэн Оюутнуудын судалгааны төсөл удирдсан<br />
+        🔥 Онцлох үйл явдал: 2019 онд олон улсын математикийн хуралд "Дээд
+        түвшний тооцооллын арга" сэдвээр илтгэл тавьсан.
+      </p>
+    </div>
+  </body>
 </html>
