--- a/htmlFiles/HomePage.html
+++ b/htmlFiles/HomePage.html
@@ -48,5 +48,130 @@
         түвшний тооцооллын арга" сэдвээр илтгэл тавьсан.
       </p>
     </div>
+    <div id="realMain">
+      <aside>
+        <form action="">
+          <input type="text" placeholder="Хайлт хийх" />
+        </form>
+        <div id="angilal">Бүх ангилал</div>
+        <div>
+          <div><a href="">Физик</a></div>
+          <div><a href="">Байгалийн ухаан</a></div>
+          <div><a href="">Хэл</a></div>
+          <div><a href="">Спорт</a></div>
+          <div><a href="">Тулааны урлаг</a></div>
+          <div><a href="">Урлаг</a></div>
+          <div><a href="">Уран сайхан</a></div>
+          <div><a href="">Хөгжим</a></div>
+          <div><a href="">Технологи</a></div>
+        </div>
+      </aside>
+      <div id="main">
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button><a href="./bagsh.html">Дэлгэрэнгүй</a></button>
+        </div>
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button>Дэлгэрэнгүй</button>
+        </div>
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button>Дэлгэрэнгүй</button>
+        </div>
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button>Дэлгэрэнгүй</button>
+        </div>
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button>Дэлгэрэнгүй</button>
+        </div>
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button>Дэлгэрэнгүй</button>
+        </div>
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button>Дэлгэрэнгүй</button>
+        </div>
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button>Дэлгэрэнгүй</button>
+        </div>
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button>Дэлгэрэнгүй</button>
+        </div>
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button>Дэлгэрэнгүй</button>
+        </div>
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button>Дэлгэрэнгүй</button>
+        </div>
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button>Дэлгэрэнгүй</button>
+        </div>
+        <div class="bagsh">
+          <img src="./pro.png" alt="" />
+          <span
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae,
+            distinctio.</span
+          >
+          <button>Дэлгэрэнгүй</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
