--- a/htmlFiles/HomePage.html
+++ b/htmlFiles/HomePage.html
@@ -130,126 +130,126 @@
       </aside>
       <div id="main">
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
           </div>
         </div>
         <div class="bagsh">
-          <img src="../pro.png" alt="" />
+          <img src="../images/pro.png" alt="" />
           <div id="medeelel">
             <h2 style="color: black">Дорж</h2>
             <span>Математикийн багш</span>
