--- a/htmlFiles/HomePage.html
+++ b/htmlFiles/HomePage.html
@@ -92,7 +92,11 @@
               aria-label="Search for inspiration"
               class="search-input"
             />
-            <button type="submit" class="search-button" aria-label="Submit search">
+            <button
+              type="submit"
+              class="search-button"
+              aria-label="Submit search"
+            >
               <svg
                 viewBox="0 0 24 24"
                 width="24"
@@ -108,8 +112,7 @@
               </svg>
             </button>
           </div>
-          <div id="results" aria-live="polite">
-          </div>
+          <div id="results" aria-live="polite"></div>
 
           <div id="results"></div>
         </form>
@@ -262,7 +265,10 @@
       <div class="footer-container">
         <div class="footer-section">
           <h3>About Us</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum illum voluptate nihil nam quam debitis?</p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum illum
+            voluptate nihil nam quam debitis?
+          </p>
         </div>
         <div class="footer-section">
           <h3>Contact Us</h3>
@@ -273,10 +279,18 @@
         <div class="footer-section">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="#" class="social-icon"><img src="../images/communication.png" alt="Facebook"></a>
-            <a href="#" class="social-icon"><img src="../images/twitter.png" alt="Twitter"></a>
-            <a href="#" class="social-icon"><img src="../images/instagram.png" alt="Instagram"></a>
-            <a href="#" class="social-icon"><img src="../images/linkedin.png" alt="LinkedIn"></a>
+            <a href="#" class="social-icon"
+              ><img src="../images/communication.png" alt="Facebook"
+            /></a>
+            <a href="#" class="social-icon"
+              ><img src="../images/twitter.png" alt="Twitter"
+            /></a>
+            <a href="#" class="social-icon"
+              ><img src="../images/instagram.png" alt="Instagram"
+            /></a>
+            <a href="#" class="social-icon"
+              ><img src="../images/linkedin.png" alt="LinkedIn"
+            /></a>
           </div>
         </div>
       </div>
