--- a/weeeb2/SignIn.html
+++ b/weeeb2/SignIn.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teacher Sign In</title>
     <link rel="stylesheet" href="/cssFiles/SignIn.css" />
-
   </head>
   <body>
+    <a class="back" href="./index.html"><img src="/weeeb2/backIcon.png" /></a>
     <div class="container">
       <div class="logo">
         <h1>BAGSH</h1>
@@ -39,7 +39,9 @@
         <button type="submit" class="btn">Sign In</button>
 
         <div class="register-link">
-          <p>Don't have an account? <a href="SignUp.html">Register</a></p>
+          <p>
+            Don't have an account? <a href="/weeeb2/SignUp.html">Register</a>
+          </p>
         </div>
       </form>
     </div>
@@ -54,7 +56,6 @@
 
           console.log("Sign in attempt:", { email, password });
           alert("Sign in functionality would be implemented here");
-
         });
     </script>
   </body>
