--- a/weeeb2/SignUp.html
+++ b/weeeb2/SignUp.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../cssFiles/SignUp.css" />
   </head>
   <body>
+    <a class="back" href="./index.html"><img src="/weeeb2/backIcon.png" /></a>
     <div class="container">
       <div class="header">
         <h2>Багш бүртгүүлэх</h2>
@@ -122,7 +123,7 @@
       </form>
 
       <div class="login-link">
-        Бүртгэлтэй юу? <a href="/htmlFiles/SignIn.html">Нэвтрэх</a>
+        Бүртгэлтэй юу? <a href="/weeeb2/SignIn.html">Нэвтрэх</a>
       </div>
     </div>
 
