--- a/htmlFiles/HomePage.html
+++ b/htmlFiles/HomePage.html
@@ -14,7 +14,7 @@
             <a href="/htmlFiles/HomePage.html">
               <img src="../images/logo.webp" alt="logo" class="logo"
             /></a>
-            <li><a href="/HomePage.html" class="text1">Нүүр хуудас</a></li>
+            <li><a href="/HomePage.html" class="text1">Нүүр </a></li>
             <li><a href="#" class="text1">Цагийн багш нар</a></li>
             <li><a href="#" class="text1">Үндсэн багш нар</a></li>
           </div>
