Bagsh listleh ehnii eeljnii logic

--- a/htmlFiles/profile.html
+++ b/htmlFiles/profile.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="teacher-info">
-                <h1>О.Мөнх-Алдар</h1>
+                <h1>А.Балданпүрэв</h1>
                 <p class="subject">Математикийн багш</p>
                 <p class="experience">10+ жилийн туршлага</p>
                 <div class="teacher-stats">
@@ -228,7 +228,6 @@
                         </div>
                     </div>
 
-                    <!-- Add Review Form -->
                     <div class="add-review">
                         <h3>Сэтгэгдэл үлдээх</h3>
                         <div class="rating-input">
@@ -247,9 +246,7 @@
                 </section>
             </div>
 
-            <!-- Right Column -->
             <div class="teacher-right-column">
-                <!-- About Section -->
                 <section class="profile-section">
                     <h2><i class="fas fa-user"></i> Тухай</h2>
                     <div class="about-content">
@@ -258,7 +255,6 @@
                     </div>
                 </section>
 
-                <!-- Teaching Style Section -->
                 <section class="profile-section">
                     <h2><i class="fas fa-chalkboard-teacher"></i> Заах арга</h2>
                     <ul class="teaching-style-list">
@@ -270,7 +266,6 @@
                     </ul>
                 </section>
 
-                <!-- Schedule Section -->
                 <section class="profile-section">
                     <h2><i class="far fa-calendar-alt"></i> Цагийн хуваарь</h2>
                     <div class="schedule-container">
@@ -301,7 +296,6 @@
                     </div>
                 </section>
 
-                <!-- Location Section -->
                 <section class="profile-section">
                     <h2><i class="fas fa-map-marker-alt"></i> Байршил</h2>
                     <div class="location-content">
@@ -320,7 +314,6 @@
                     </div>
                 </section>
 
-                <!-- Subjects Section -->
                 <section class="profile-section">
                     <h2><i class="fas fa-book"></i> Заадаг хичээлүүд</h2>
                     <div class="subjects-container">
@@ -336,7 +329,6 @@
                 <!-- Contact Button -->
                 <button class="contact-teacher-btn">Багштай холбогдох</button>
 
-                <!-- Add to Cart Button (Sticky) -->
                 <div class="sticky-cart-btn">
                     <button class="add-to-cart-btn">Сагсанд нэмэх - ₮25,000/цаг</button>
                 </div>
