--- a/weeeb2/index.html
+++ b/weeeb2/index.html
@@ -15,12 +15,12 @@
       <nav>
         <div class="linkContainer"><link rel="stylesheet" href="" /></div>
         <div id="golNav">
-          <div>About Us</div>
-          <div>How it Works</div>
-          <div><a href="../htmlFiles/HomePage.html">Teachers</a></div>
-          <div>Student</div>
+          <div>Бидний тухай</div>
+          <div>Хэрхэн ажилладаг вэ</div>
+          <div><a href="../htmlFiles/HomePage.html">Багш нар</a></div>
+          <div>Сурагчид</div>
         </div>
-        <a class="sign" href="./SignUp.html">Get started</a>
+        <a class="sign" href="./SignUp.html">Нэвтрэх</a>
       </nav>
     </div>
     <!-- eh biy -->
@@ -32,14 +32,11 @@
           <h1>Төгс багшыг ол</h1>
         </div>
         <div class="loremm">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore
-          deserunt nobis in, quam recusandae pariatur magni maxime asperiores,
-          reiciendis consequatur minima soluta dolore eum quasi facere
-          reprehenderit tempore veritatis delectus.
+          Бид таныг маш чадварлаг багштай холбож өгөх ба та манай платформ оос хүссэн багшаа авч болно
         </div>
         <div id="infoB">
-          <button class="infoBtn"><a href="../htmlFiles/HomePage.html" style="text-decoration: none; color: white;">Find Teacher</a></button>
-          <button class="infoBtn">Learn More</button>
+          <button class="infoBtn"><a href="../htmlFiles/HomePage.html" style="text-decoration: none; color: white;">Багш хайх</a></button>
+          <button class="infoBtn">Илүү мэдэх</button>
         </div>
       </div>
     </div>
@@ -53,8 +50,7 @@
               >Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Necessitatibus id quae dolorum minima inventore quaerat soluta
               cupiditate, magni iste beatae, labore illo totam veritatis quam.
-              Quis, ad dicta! Cum, nobis?</span
-            >
+              Quis, ad dicta! Cum, nobis?</span>
           </div>
           <div id="info2_2">
             <div>
