profile iin uil yavts componentuud uusgej ehelsen ba zohiomol data uusgesen

--- a/htmlFiles/profile.html
+++ b/htmlFiles/profile.html
@@ -32,7 +32,7 @@
         <!-- Teacher Header Section -->
         <div class="teacher-header">
             <div class="teacher-avatar">
-                <img src="../images/pro.png" alt="Teacher Avatar">
+                <img src="/zurag/pro.png" alt="Teacher Avatar">
                 <div class="rating-badge">
                     <span>4.9</span>
                     <img src="../images/star.webp" alt="Star Rating">
